--- a/DxShoot/DxShoot.vcxproj
+++ b/DxShoot/DxShoot.vcxproj
@@ -74,11 +74,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%DX_LIB%;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%DX_LIB%</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy $(ProjectDir)Contents $(OutDir)Contents  /I /E /D /Y</Command>
@@ -89,13 +89,17 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>%DX_LIB%;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%DX_LIB%</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy $(ProjectDir)Contents $(OutDir)Contents  /I /E /D /Y</Command>
     </PostBuildEvent>
+    <ProjectReference>
+      <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -104,13 +108,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%DX_LIB%;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%DX_LIB%</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy $(ProjectDir)Contents $(OutDir)Contents  /I /E /D /Y</Command>
@@ -123,22 +127,25 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>%DX_LIB%;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>S:\Library\DxLibNoneModel_NoneSoftDrawCode_VC</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%DX_LIB%</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy $(ProjectDir)Contents $(OutDir)Contents  /I /E /D /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="ImageLoader.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlayEngine.cpp" />
     <ClCompile Include="PlayerCharacter.cpp" />
+    <ClCompile Include="Shot.cpp" />
     <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -150,11 +157,13 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
     <ClInclude Include="ImageLoader.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="PlayEngine.h" />
     <ClInclude Include="PlayerCharacter.h" />
+    <ClInclude Include="Shot.h" />
     <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
