--- a/Beat/Beat.vcxproj
+++ b/Beat/Beat.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{6AAC9C87-C853-47B1-AFAA-6C32D41D9B5F}</ProjectGuid>
     <RootNamespace>DxShoot</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Beat</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
